Fixed layout issues

--- a/assets/css/hs-main.css
+++ b/assets/css/hs-main.css
@@ -2907,7 +2907,7 @@ input, select, textarea {
 
 		.split > :nth-child(2n - 1) {
 			padding-right: 2.5em;
-			border-right: solid 1px rgba(255, 255, 255, 0.15);
+			/*border-right: solid 1px rgba(255, 255, 255, 0.15);*/
 		}
 
 		.split > :nth-child(2n) {
@@ -3070,6 +3070,10 @@ input, select, textarea {
 		.spotlights > section:nth-child(3) {
 			background-color: rgba(0, 0, 0, 0.1);
 		}
+
+                .spotlights > section:nth-child(4) {
+                        background-color: rgba(0, 0, 0, 0.15);
+                }
 
 		.spotlights > section.inactive > .image:before,
 		body.is-preload .spotlights > section > .image:before {
